optimized for web perf

--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -19,6 +19,12 @@
     @Html.Partial("_PartialCart",Model)
 </section>
 <!--End Cart Section-->
+@section FancyBox {
+    <script src="~/js/jquery.fancybox.js" defer></script>
+}
+@section TouchSpin{
+    <script src="~/js/jquery.bootstrap-touchspin.js" defer></script>
+}
 @section AdditionalScripts{
     <script>
         $(document).ready(function (){
