--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,14 +8,20 @@
     <meta name="keywords" content="Çin ithalat, toptan ürünler, perakende satış, marka patent, e-ticaret çözümleri, toptan spor malzemeleri ithalatı, marka desteği, toptan petshop ürünleri,
                                     toptan spor malzemesi">
 }
+@section RevolutionCSS {
+	<link rel="preload" as="image" href="/images/main-slider/logistics.jpg">
+	<link href="~/plugins/revolution/css/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
+	<link href="~/plugins/revolution/css/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
+	<link href="~/plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
+}
 	<section class="main-slider">
 
 		<div class="rev_slider_wrapper fullwidthbanner-container" id="rev_slider_one_wrapper" data-source="gallery">
 			<div class="rev_slider fullwidthabanner" id="rev_slider_one" data-version="5.4.1">
 				<ul>
 					<!--slider 1 logistics-->
-					<li data-description="Hızlı Tedarik ve Lojistik" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1687" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/logistics.jpg" data-title="Hızlı Tedarik ve Lojistik" data-transition="parallaxvertical">
-						<img alt="Hızlı Tedarik ve Lojistik"  class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/logistics.jpg">
+					<li data-description="Hızlı Tedarik ve Lojistik" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1687" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/logistics.avif" data-title="Hızlı Tedarik ve Lojistik" data-transition="parallaxvertical">
+							<img alt="Hızlı Tedarik ve Lojistik" loading="eager" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/logistics.jpg">
 
 						<!-- Başlık -->
 						<div class="tp-caption"
@@ -33,7 +39,7 @@
 							 data-x="['left','left','left','left']"
 							 data-y="['middle','middle','middle','middle']"
 							 data-textalign="['top','top','top','top']"
-							 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
+							 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":400,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
 							<h2>Hızlı ve Güvenilir <br><span class="theme_color">Lojistik Çözümler</span></h2>
 						</div>
 
@@ -79,8 +85,9 @@
 						</div>
 					</li>
 					<!--slider 2 categories-->
-					<li data-description="Ürün Çeşitliliği" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1688" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/catalogs.jpg" data-title="Ürün Yelpazesi" data-transition="parallaxvertical">
-						<img alt="Ürün Çeşitliliği"  class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/categories.jpg">
+					<li data-description="Ürün Çeşitliliği" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1688" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/catalogs.avif" data-title="Ürün Yelpazesi" data-transition="parallaxvertical">
+						
+							<img alt="Ürün Çeşitliliği" loading="lazy" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/categories.jpg">
 
 						<div class="tp-caption"
 							 data-paddingbottom="[0,0,0,0]"
@@ -141,9 +148,8 @@
 
 					</li>
 					<!--slider 3  e-commmerce-->
-					<li data-description="E Ticaret Desteği" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1689" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/ecommerce.jpg" data-title="E Ticaret" data-transition="parallaxvertical">
-						<img alt="E Ticaret Desteği"  class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/ecommerce.jpg">
-
+					<li data-description="E Ticaret Desteği" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1689" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/ecommerce.avif" data-title="E Ticaret" data-transition="parallaxvertical">
+							<img alt="E Ticaret Desteği" loading="lazy" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/ecommerce.jpg">
 						<div class="tp-caption"
 							 data-paddingbottom="[0,0,0,0]"
 							 data-paddingleft="[0,0,0,0]"
@@ -213,7 +219,20 @@
 </div>
 <div id="contact-us-content">
 </div>
-
+@section RevolutionSlider{
+	<script src="~/plugins/revolution/js/jquery.themepunch.revolution.min.js" defer></script>
+	<script src="~/plugins/revolution/js/jquery.themepunch.tools.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.actions.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.carousel.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.kenburn.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.layeranimation.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.migration.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.navigation.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.parallax.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.slideanims.min.js" defer></script>
+	<script src="~/plugins/revolution/js/extensions/revolution.extension.video.min.js" defer></script>
+	<script src="~/js/main-slider-script.js"></script>
+}
 @section AdditionalScripts {
 	<script>
 		$(document).ready(function () {
