--- a/Views/Home/ProductDetailed.cshtml
+++ b/Views/Home/ProductDetailed.cshtml
@@ -197,7 +197,9 @@
         </div>
     </div>
 </div>
-
+@section FancyBox {
+    <script src="~/js/jquery.fancybox.js" defer></script>
+}
 <!--End Sidebar Page Container-->
 @section AdditionalScripts {
 
