--- a/Views/Shared/_PartialEcommerceService.cshtml
+++ b/Views/Shared/_PartialEcommerceService.cshtml
@@ -14,7 +14,7 @@
                 <!-- Image Column -->
                 <div class="image-column col-lg-6 col-md-12 col-sm-12">
                     <div class="image">
-                        <img src="~/images/resource/image-1.jpg" alt="Hizmetlerimiz" />
+                        <img src="~/images/resource/image-1.avif" loading="lazy" alt="Hizmetlerimiz" />
                     </div>
                 </div>
                 <!-- Content Column -->
