perf opt for js and css

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,5 +1,6 @@
 ﻿@section Title {
     <meta name="title" content="Hakkında">
+    <title>Birileri Hakkında</title>
 }
 @section Description {
     <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
