--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,6 +1,7 @@
 ﻿@model BirileriWebSitesi.Models.BasketAggregate.Basket
 @section Title {
-    <meta name="title" content="Hakkında">
+    <meta name="title" content="Sepet">
+    <title>Sepet</title>
 }
 @section Description {
     <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
@@ -20,7 +21,7 @@
 </section>
 <!--End Cart Section-->
 @section FancyBox {
-    <script src="~/js/jquery.fancybox.js" defer></script>
+    <script src="~/js/jquery.fancybox.min.js" defer></script>
 }
 @section TouchSpin{
     <script src="~/js/jquery.bootstrap-touchspin.js" defer></script>
