--- a/Views/Home/CheckOut.cshtml
+++ b/Views/Home/CheckOut.cshtml
@@ -4,6 +4,7 @@
 }
 @section Title {
     <meta name="title" content="Kargo ve Fatura Bilgileri">
+    <title>Kargo ve Fatura Bilgileri</title>
 }
 @section Description {
     <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
