--- a/Views/Home/Payment.cshtml
+++ b/Views/Home/Payment.cshtml
@@ -3,6 +3,7 @@
 
 @section Title {
     <meta name="title" content="Ödeme">
+    <title>Ödeme</title>
 }
 @section Description {
     <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
