--- a/Views/Home/ProductDetailed.cshtml
+++ b/Views/Home/ProductDetailed.cshtml
@@ -14,6 +14,7 @@
 }
 @section Title {
     <meta name="title" content=@Model.Product.MetaTitle>
+    <title>@Model.Product.MetaTitle</title>
 }
 @section Description {
     <meta name="description" content=@Model.Product.MetaDescription>
