--- a/Views/Shared/_CatalogPartial.cshtml
+++ b/Views/Shared/_CatalogPartial.cshtml
@@ -38,7 +38,7 @@
                             <div class="image">
                                 <picture>
                                     <source srcset="@Url.Content(avifPath)" type="image/avif">
-                                    <img loading="lazy" alt="@item.CatalogName" src="@Url.Content(imagePath)" />
+                                    <img class="catalog-image" loading="lazy" alt="@item.CatalogName" src="@Url.Content(imagePath)" />
                                 </picture>
 
                                 <div class="overlay-box">
