--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@section Title {
     <meta name="title" content="İthal Ürünler | Toptan ve Perakende Satış">
+	<title>"İthal Ürünler | Toptan ve Perakende Satış"</title>
 }
 @section Description {
     <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
@@ -14,6 +15,13 @@
 	<link href="~/plugins/revolution/css/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
 	<link href="~/plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
 }
+@section CSS {
+		.catalog-image {
+		width: 100%;        
+		height: auto;       
+		object-fit: cover;  
+	}
+}
 	<section class="main-slider">
 
 		<div class="rev_slider_wrapper fullwidthbanner-container" id="rev_slider_one_wrapper" data-source="gallery">
@@ -21,7 +29,8 @@
 				<ul>
 					<!--slider 1 logistics-->
 					<li data-description="Hızlı Tedarik ve Lojistik" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1687" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/logistics.avif" data-title="Hızlı Tedarik ve Lojistik" data-transition="parallaxvertical">
-							<img alt="Hızlı Tedarik ve Lojistik" loading="eager" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/logistics.jpg">
+							
+					<img alt="Hızlı Tedarik ve Lojistik" loading="eager" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/logistics.avif">
 
 						<!-- Başlık -->
 						<div class="tp-caption"
@@ -87,7 +96,7 @@
 					<!--slider 2 categories-->
 					<li data-description="Ürün Çeşitliliği" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1688" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/catalogs.avif" data-title="Ürün Yelpazesi" data-transition="parallaxvertical">
 						
-							<img alt="Ürün Çeşitliliği" loading="lazy" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/categories.jpg">
+							<img alt="Ürün Çeşitliliği" loading="lazy" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/categories.avif">
 
 						<div class="tp-caption"
 							 data-paddingbottom="[0,0,0,0]"
@@ -149,7 +158,7 @@
 					</li>
 					<!--slider 3  e-commmerce-->
 					<li data-description="E Ticaret Desteği" data-delay="8000" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1689" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/ecommerce.avif" data-title="E Ticaret" data-transition="parallaxvertical">
-							<img alt="E Ticaret Desteği" loading="lazy" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/ecommerce.jpg">
+							<img alt="E Ticaret Desteği" loading="lazy" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="~/images/main-slider/ecommerce.avif">
 						<div class="tp-caption"
 							 data-paddingbottom="[0,0,0,0]"
 							 data-paddingleft="[0,0,0,0]"
