logo style updated

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,11 +16,13 @@
 	<link href="~/plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
 }
 @section CSS {
+	<style>
 		.catalog-image {
-		width: 100%;        
-		height: auto;       
-		object-fit: cover;  
-	}
+			width: 100%;        
+			height: auto;       
+			object-fit: cover;
+		}
+	</style>
 }
 	<section class="main-slider">
 
