email configuration made

--- a/Views/Shared/_PartialContactUs.cshtml
+++ b/Views/Shared/_PartialContactUs.cshtml
@@ -36,7 +36,7 @@
 
                                 <div class="col-lg-12 col-md-12 col-sm-12 form-group">
                                     <span class="alert-text"></span>
-                                    <button class="theme-btn btn-style-one send-contact-us" type="submit" name="submit-form">Gönder</button>
+                                    <button aria-label="Gönder" title="İletişim Formu" class="theme-btn btn-style-one send-contact-us" type="submit" name="submit-form">Gönder</button>
                                 </div>
 
                             </div>
