--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                                     toptan spor malzemesi">
 }
 @section RevolutionCSS {
-	<link rel="preload" as="image" href="/images/main-slider/logistics.jpg">
+	<link rel="preload" as="image" href="/images/main-slider/logistics.avif">
 	<link href="~/plugins/revolution/css/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
 	<link href="~/plugins/revolution/css/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
 	<link href="~/plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
