ui performance update

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -30,7 +30,7 @@
             <!--image Column-->
             <div class="image-column col-lg-5 col-md-12 col-sm-12">
                 <div class="image">
-                    <img src="~/images/resource/image-3.jpg" alt="" />
+                    <img src="~/images/resource/image-3.avif" alt="about" />
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                         <div class="form-group">
                             <span class="alert-text"></span>
                             <input type="email" name="email" class="subscribe-input" value="" placeholder="mail adresiniz" required>
-                            <button type="submit" class="theme-btn subscribe-btn"><span class="fa fa-send"></span></button>
+                            <button type="submit" aria-label="Send" class="theme-btn subscribe-btn"><span class="fa fa-send"></span></button>
                         </div>
                     </form>
                 </div>
