--- a/Views/Shared/_PartialEcommerceService.cshtml
+++ b/Views/Shared/_PartialEcommerceService.cshtml
@@ -46,7 +46,7 @@
                             </div>
 
                         <div class="cta" style="text-align: center; margin-top: 20px;">
-                            <a asp-controller="Home" asp-action="ContactUs" class="theme-btn btn-style-one" style="padding: 12px 25px; font-size: 18px;">
+                            <a asp-controller="Home" aria-label="Hemen Teklif Al" asp-action="ContactUs" class="theme-btn btn-style-one" style="padding: 12px 25px; font-size: 18px;">
                                 Hemen Teklif Al
                             </a>
                         </div>
