--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,9 @@
     <!-- Stylesheets -->
     <link href="~/css/bootstrap.css" rel="stylesheet">
     @RenderSection("RevolutionCSS", required: false)
-    
+
+    <link rel="icon" type="image/png" href="~/images/png-resim.png" />
+
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/responsive.css" rel="stylesheet">
 
@@ -23,8 +25,6 @@
     <!--Color Themes-->
     <link id="theme-color-file" href="~/css/color-themes/default-theme.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="~/images/favicon.png" type="image/x-icon">
     @RenderSection("CSS", required: false)
     <style>
         <!-- alert modal -->
