--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link href="~/css/bootstrap.css" rel="stylesheet">
     @RenderSection("RevolutionCSS", required: false)
 
-    <link rel="icon" type="image/png" href="~/images/png-resim.png" />
+    <link rel="icon" type="image/png" href="~/images/logo-resim.png" />
 
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/responsive.css" rel="stylesheet">
