--- a/Views/Shared/_PartialRelatedProductsWidget.cshtml
+++ b/Views/Shared/_PartialRelatedProductsWidget.cshtml
@@ -8,8 +8,8 @@
     @foreach (Product item in Model)
     {
         <div class="post">
-            <figure class="post-thumb"><a href="shop-single.html"> <img src="@Url.Content(string.Format("~/images/resource/products/{0}/1.jpg", item.ProductCode))" alt="@item.ProductName" /></a></figure>
-            <h4><a asp-controller="Home" asp-action="ProductDetailed">@item.ProductName</a></h4>
+            <figure class="post-thumb"><a asp-controller="Home" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode"> <img src="@Url.Content(string.Format("~/images/resource/products/{0}/1.jpg", item.ProductCode))" alt="@item.ProductName" /></a></figure>
+            <h4><a asp-controller="Home" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode">@item.ProductName</a></h4>
             <div class="rating"><span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span></div>
             <div class="price">@item.BasePrice ₺</div>
         </div>
