--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -187,7 +187,7 @@
                         <picture>
                             <source srcset="@Url.Content("~/images/logo-small.avif")" class="logo-image" type="image/avif" width="auto" height="30">
                             <img alt="Logo" loading="lazy" class="logo-image"
-                                 src="@Url.Content("~/images/logo-small.png")" />
+                                 src="@Url.Content("~/images/logo-small.ico")" />
                         </picture>
                        
                     </a>
