--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link href="~/css/bootstrap.css" rel="stylesheet">
     @RenderSection("RevolutionCSS", required: false)
 
-    <link rel="icon" type="image/png" href="~/images/logo-resim.png" />
+    <link rel="icon" type="image/png" href="~/images/logo-resim.ico" />
 
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/responsive.css" rel="stylesheet">
@@ -187,7 +187,7 @@
                         <picture>
                             <source srcset="@Url.Content("~/images/logo-small.avif")" class="logo-image" type="image/avif" width="auto" height="30">
                             <img alt="Logo" loading="lazy" class="logo-image"
-                                 src="@Url.Content("~/images/logo-small.ico")" />
+                                 src="@Url.Content("~/images/logo-small.png")" />
                         </picture>
                        
                     </a>
